--- a/Semesteraufgabe/package.json
+++ b/Semesteraufgabe/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~12.2.0",
     "bootstrap": "^4.6.1",
     "jquery": "^3.6.0",
+    "ngx-bootstrap": "^7.1.2",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
