--- a/Semesteraufgabe/package.json
+++ b/Semesteraufgabe/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "bootstrap": "^4.6.1",
+    "bootstrap-icons": "^1.8.1",
     "jquery": "^3.6.0",
     "ngx-bootstrap": "^7.1.2",
     "popper.js": "^1.16.1",
